PMforce/src/objects/Feedback_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>ConNumber__c</fullName>
        <label>ConNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmailid__c</fullName>
        <formula>FeedbackContactName__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactEmailid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedBackNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FeedbackMain</label>
        <referenceTo>Feedback_Main__c</referenceTo>
        <relationshipLabel>Feedback Contacts</relationshipLabel>
        <relationshipName>Feedback_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FeedbackContactName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Feedback Contacts</relationshipLabel>
        <relationshipName>Feedback_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseDate__c</fullName>
        <label>ResponseDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Feedback Contacts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Feedback Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>